Fixing put schema
