# swagger-output.json
@@ -102,25 +102,13 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
-                  "type": "string",
-                  "example": "Alice"
+                "acknowledged": {
+                  "type": "boolean",
+                  "example": true
                 },
-                "lastName": {
+                "insertedId": {
                   "type": "string",
-                  "example": "Johnson"
-                },
-                "email": {
-                  "type": "string",
-                  "example": "alicejohnson@test.com"
-                },
-                "favoriteColor": {
-                  "type": "string",
-                  "example": "red"
-                },
-                "birthdate": {
-                  "type": "string",
-                  "example": "02/02/22"
+                  "example": "6826cf1a65bd95eeb8d5908c"
                 }
               },
               "xml": {
